--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "dotenv": "^16.5.0",
     "firebase": "^11.9.1",
     "genkit": "^1.8.0",
+    "lucide-react": "^0.523.0",
     "next": "14.2.5",
     "patch-package": "^8.0.0",
     "qrcode.react": "^3.1.0",
